--- a/app/views/meteo.html
+++ b/app/views/meteo.html
@@ -13,6 +13,6 @@
 	</div>
 </body>
 <footer> 
-	<a href="/"><input type="button" value="Retour au menu"></a>
+	<a ng-href="#!/"><input type="button" value="Retour au menu"></a>
 </footer>
 </html>
